[package]
name = "rust_cuda"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_cuda"
path = "src/lib.rs"

[[bin]]
name = "rust_cuda"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.dev]
opt-level = 1
debug = true
